# AED_Grupo3_Proyecto

./: CMakeLists.txt  README.md  avl.h  block.h  blockchain.h  hashtable.h  main.cpp  maxheap.h  minheap.h  suffixtree.h  transaction.h  trie.h
GUI_files/: menu.h
blockchain_files/: block.h  blockchain.h  transaction.h
data_structures/: avl.h  maxheap.h  suffixtree.h  trie.h
